fixed EnableIpadHTMLControls option
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1287 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/SWFObject_1.5_JQuery1.2_iframeRewrite.html
+++ b/modules/KalturaSupport/tests/SWFObject_1.5_JQuery1.2_iframeRewrite.html
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script>  
 
 <script type="text/javascript">
-	mw.setConfig( 'Kaltura.IframeRewrite', true );
+	//mw.setConfig( 'Kaltura.IframeRewrite', true );
 </script> 
 <title>swfOjbect fallforward test</title> 
  
@@ -18,7 +18,6 @@
 	<a href="?forceMobileHTML5"> Force Mobile HTML5</a> for testing with desktop html5 browsers
 <br />
 	<div id="kaltura_wrapper_1_b31ue6o7"></div>
-	
 	
      <div id="kaltura_wrapper_1_b31ue6o7" class="kaltura_wrapper" style="">
      <script type="text/javascript">
