* some fixes to the iframe proxy for high frequency events ( such as monitor ) * stubs for kApi abstraction ( to replace the kaltura automatic generated code ) * moved analytic trigger to jQuery bind / trigger instead of function in configuration option.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1290 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -14,8 +14,8 @@
 	if( document.URL.indexOf('forceMobileHTML5') != -1 ){		
 		mw.setConfig( 'forceMobileHTML5' , true );
 	}			
-	mw.setConfig( 'Kaltura.AnalyticsCallback', function( monitorEvent ){
-		$j('#analyticsLog').append( monitorEvent + "\n");
+	$j( mw ).bind( 'Kaltura.SendAnalyticEvent', function(event,  analyticName ){
+		$j('#analyticsLog').append( analyticName + "\n");
 	});
 
 </script>
