--- a/modules/KalturaSupport/tests/Player_Analytics.html
+++ b/modules/KalturaSupport/tests/Player_Analytics.html
@@ -10,10 +10,11 @@
 		mw.setConfig( 'forceMobileHTML5' , true );
 	}			
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );
-	mw.setConfig( 'Kaltura.AnalyticsCallback', function( monitorEvent ){
-		$j('#analyticsLog').append( monitorEvent + "\n");
-	});	
-
+	mw.ready(function(){
+		$j(mw).bind( 'Kaltura.SendAnalyticEvent', function(event,  analyticName ){
+			$j('#analyticsLog').append( analyticName + "\n");
+		});
+	});
 </script>
 </head>
 <body>
