* initial support for new KAPI client (removes dependency of kalturaJSClient ( 257.6K uncompressed ) replaced with 250 lines and reduced api usage calls overhead substantially ( ie kWidget lost 50 lines or so in the initial refactor ) * ported player, analytics and uiConf parsing. * also new api refactor includes support for multiRequest ( greatly reducing number of requests ) * mostly tested a single page, playlist support remains to be ported over.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1292 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/DynamicKEntryId.html
+++ b/modules/KalturaSupport/tests/DynamicKEntryId.html
@@ -13,6 +13,10 @@
 mw.ready( function(){
 	$j('#showVideo').attr('disabled', null);
 	mw.setConfig( 'EmbedPlayer.OverlayControls', false );	
+
+	mw.load(["MD5", 'mw.KApi'], function(){
+	});
+	
 	$j('#showVideo').click( function(){		
 		$j( '#videoContainer' ).loadingSpinner();				
 		mw.load( 'EmbedPlayer', function(){
