--- a/modules/KalturaSupport/tests/WatermarkTest.html
+++ b/modules/KalturaSupport/tests/WatermarkTest.html
@@ -3,7 +3,9 @@
 <title>Fall forward html5</title>
 
 <script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true>"></script>  
-
+<script type="text/javascript">		
+	mw.setConfig( 'Kaltura.IframeRewrite', true );	
+</script>
 </head>
 <body>
 <h2> watermark </h2>	
