* Improved Loading Spinner * New Kaltura Dark Skin (not done yet)
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1327 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/tests/Player_Sources.html
+++ b/modules/EmbedPlayer/tests/Player_Sources.html
@@ -4,6 +4,9 @@
 <title>Player sources</title>
 
 <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
+<script>
+mw.setConfig( 'EmbedPlayer.OverlayControls', false );	
+</script>
 </head>
 <body>
 
