--- a/modules/KalturaSupport/tests/integrationTests/ExtIntegrationTest.html
+++ b/modules/KalturaSupport/tests/integrationTests/ExtIntegrationTest.html
@@ -9,7 +9,7 @@
 <script type="text/javascript" src="../../../../mwEmbedLoader.js"></script>
 
 <script type="text/javascript">		
-	mw.setConfig( 'Kaltura.IframeRewrite', true );	
+	//mw.setConfig( 'Kaltura.IframeRewrite', true );	
 </script>
 
 </head>
