KDP Mapping changes (still not working)
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1340 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -189,7 +189,7 @@
 		}
 	</script>
 	
-	<script type="text/javascript">
+	<script type="text/javascript">/*
 		var flashvars = {};
 		flashvars.autoPlay = "false";
 		//flashvars.entryId = "http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb.flv";
@@ -219,7 +219,7 @@
 		flashvars['bannerad.position']='firstChild';
 		flashvars['bannerad.relativeTo']='player';
 		flashvars['bannerad.className']='Watermark';
-		*/
+		
 		var params = {};
 		params.quality = "best";
 		params.wmode = "opaque";
@@ -232,7 +232,7 @@
 		attributes.styleclass = "player";
 		
 		swfobject.embedSWF("http://www.kaltura.org/demos/kdp3/kdp3.swf", "kdp3", "570", "380", "10.0.0", "jslib/expressInstall.swf", flashvars, params, attributes);
-		
+		*/
 	</script>	
 </head>
 <body>
@@ -277,7 +277,7 @@
 <div id="container">
 	<h1 class="title">Kaltura Dynamic Player version 3 ( HTML5lib backend test ) </h1>
 	<p>Hover over the parameters or APIs from the list for description, click to test &amp; learn more.</p>
-	<object style="visibility: visible;" data="kdp3_mapping_files/kdp3.swf" class="player" name="kdp3" id="kdp3" type="application/x-shockwave-flash" width="570" height="380"><param value="best" name="quality"><param value="opaque" name="wmode"><param value="true" name="allowfullscreen"><param value="always" name="allowscriptaccess"><param value="autoPlay=false&amp;entryId=0_l4xrt3og&amp;sourceType=entryId&amp;debugMode=true&amp;fileSystemMode=true&amp;widgetId=_225762&amp;partnerId=225762&amp;pluginDomain=plugins/&amp;kml=local&amp;kmlPath=config.xml&amp;host=www.kaltura.com&amp;cdnHost=cdn.kaltura.com&amp;externalInterfaceDisabled=false" name="flashvars"></object>
+	<object id="kdp3" name="kdp3" type="application/x-shockwave-flash" allowFullScreen="true" allowNetworking="all" allowScriptAccess="always" height="330" width="400" xmlns:dc="http://purl.org/dc/terms/" xmlns:media="http://search.yahoo.com/searchmonkey/media/" rel="media:video" resource="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" data="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4"><param name="allowFullScreen" value="true" /><param name="allowNetworking" value="all" /><param name="allowScriptAccess" value="always" /><param name="bgcolor" value="#000000" /><param name="flashVars" value="&" /><param name="movie" value="http://www.kaltura.com/index.php/kwidget/cache_st/1291647430/wid/_243342/uiconf_id/2890431/entry_id/0_uka1msg4" /><a href="http://corp.kaltura.com">video platform</a> <a href="http://corp.kaltura.com/video_platform/video_management">video management</a> <a href="http://corp.kaltura.com/solutions/video_solution">video solutions</a> <a href="http://corp.kaltura.com/video_platform/video_publishing">video player</a> <a rel="media:thumbnail" href="http://cdnbakmi.kaltura.com/p/243342/sp/24334200/thumbnail/entry_id/0_uka1msg4/width/120/height/90/bgcolor/000000/type/2" /> <span property="dc:description" content="" /><span property="media:title" content="FolgersCoffe.mpeg" /> <span property="media:width" content="400" /><span property="media:height" content="330" /> <span property="media:type" content="application/x-shockwave-flash" /> </object>
 </div>	
 <div id="cleardiv" style="clear: both; margin-top: 10px;"></div>
 </body></html>
