* update ad support * fixed iframe analytics ( bootstrap ks )
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1354 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/AdSupport/tests/Ad_Events_test.html
+++ b/modules/AdSupport/tests/Ad_Events_test.html
@@ -23,7 +23,7 @@
 		</div>
 	</div>
 	<div style="clear:both"></div>
-   	<br>Prerool video (coffee) <input id="preroll" type="text" size="40" value="http://cdn.kaltura.com/p/243342/sp/24334200/flvclipper/entry_id/0_uka1msg4/flavor/0_zc8zwscb/a.mp4?novar=0"></input>
+   	<br>Preroll video (30 seconds fish) <input id="preroll" type="text" size="40" value="http://cdn.kaltura.com/p/423851/sp/42385100/flvclipper/entry_id/1_8c3s1pvx/flavor/1_5slf6gab/a.mp4?novar=0"></input>
    	<a id="addPrerool" href="#">Update preroll video</a>
    	</br>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
