--- a/modules/AdSupport/tests/Ad_Events_test.html
+++ b/modules/AdSupport/tests/Ad_Events_test.html
@@ -5,15 +5,12 @@
     <title></title>
   </head>
   <body>
-    <h1>
-      HTML5 ad timeline test
-    </h1>
     <div style="width:680">
-    <div class="playerContainer" style="float:left;width:480px">
-		<video persistentNativePlayer="true" id="vid1" width="480" height="267"
+    <div class="playerContainer" style="float:left;width:480px;top:0px;left:0px;position:absolute;">
+		<video class="persistentNativePlayer" id="vid1" width="480" height="267"
 		 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 		 durationHint="33"
-		 controls>
+		 >
 		 	<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb_trailer_iphone.m4v" />
 			<source src="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb400p.ogv" />
 		</video>
@@ -23,6 +20,9 @@
 		</div>
 	</div>
 	<div style="clear:both"></div>
+	    <h1>
+      HTML5 ad timeline test
+    </h1>
    	<br>Preroll video (30 seconds fish) <input id="preroll" type="text" size="40" value="http://cdn.kaltura.com/p/423851/sp/42385100/flvclipper/entry_id/1_8c3s1pvx/flavor/1_5slf6gab/a.mp4?novar=0"></input>
    	<a id="addPrerool" href="#">Update preroll video</a>
    	</br>
@@ -57,7 +57,7 @@
 
 			// Alternativly to the monitorEvent you can use the mobileAdTimeline helper 
 			// See structure of ad JSON in mw.MobileAdTimeline 
-			mw.load( "mw.MobileAdTimeline", function(){
+			mw.load( "mw.AdTimeline", function(){
 		
 				var updatePreRool = function( preRollUrl ){
 					mw.addAdToPlayerTimeline( embedPlayer, 'preroll', 
@@ -65,10 +65,10 @@
 		 	 	 	 		'ads': [
 				 	 	 	 	{
 			 	 					'videoFile' : preRollUrl,
-			 	 					'companions:': [
+			 	 					'companions': [
 			 	 		 	 	 		{
-					 						'id' : 1, // tragicly someone set this up to start at 1 instead of 0 :(
-					 						'html' : '<div style="background-color:blue">Fish companion Ad</div>'
+					 						'id' : 0,
+					 						'html' : '<div style="background-color:#99F">Fish companion Ad</div>'
 				 						}
 				 					]
 		 						}
@@ -94,23 +94,26 @@
 	 			// Insert the overlay video
 				mw.addAdToPlayerTimeline( embedPlayer, 'overlay', 
  	 	 	 		{ 
- 	 	 	 	 		'ads': {
-	 	 	 	 			'frequency' : 10,
-	 	 	 	 			'timeout' : 5,
- 	 	 					'companions:': [
-	 	 	 	 					{
-		 							'id' : 1, // tragicly someone set this up to start at 1 instead of 0 :(
-		 							'html' : '<div style="background-color:red">Overlay Companion</div>'
-								}
- 		 					],
- 	 	 	 	 			'nonLinear': [
- 	 			            	{
- 	 	 			            	'width' : 320,
- 	 	 			            	'height' : 30,
- 	 	 			            	'html' : '<div style="width:100%;height:100%;background-color:gray"> overlay ad </div>'
- 	 			            	}
-							]
- 	 					},
+ 	 	 	 	 		'ads': [
+		 	 	 	 		{			 	 
+	 	 	 					'companions': [
+		 	 	 	 					{
+			 							'id' : 1, 
+			 							'html' : '<div style="background-color:#F99">Overlay Companion</div>'
+									}
+	 		 					],
+	 	 	 	 	 			'nonLinear': [
+	 	 			            	{
+	 	 	 			            	'width' : 320,
+	 	 	 			            	'height' : 30,
+	 	 	 			            	'html' : '<div style="width:100%;height:100%;background-color:gray;font-size:large"> overlay Ad </div>'
+	 	 			            	}
+								]
+		 	 	 	 		}
+ 	 					],
+ 	 			 		'start' : 5,
+ 	 	 	 			'frequency' : 10,
+ 	 	 	 			'timeout' : 5,
 	 					'companionTargets': [
 	 					 		{
  	 								'elementid':'companionTarget'
