improved ad layout fix bug in kalturaiframe.php play event url building
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1359 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/AdSupport/tests/Ad_Events_test.html
+++ b/modules/AdSupport/tests/Ad_Events_test.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div style="width:680">
-    <div class="playerContainer" style="float:left;width:480px;top:0px;left:0px;position:absolute;">
+    <div class="playerContainer" style="float:left;width:480px;height:290px;top:0px;left:0px;position:absolute;">
 		<video class="persistentNativePlayer" id="vid1" width="480" height="267"
 		 poster="http://cdn.kaltura.org/apis/html5lib/kplayer-examples/media/bbb480.jpg"
 		 durationHint="33"
@@ -25,7 +25,7 @@
     </h1>
    	<br>Preroll video (30 seconds fish) <input id="preroll" type="text" size="40" value="http://cdn.kaltura.com/p/423851/sp/42385100/flvclipper/entry_id/1_8c3s1pvx/flavor/1_5slf6gab/a.mp4?novar=0"></input>
    	<a id="addPrerool" href="#">Update preroll video</a>
-   	</br>
+    </br>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
  	<script src="../../../mwEmbedLoader.js?debug=true" type="text/javascript"></script>
  	<script type="text/javascript">
