--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -121,6 +121,7 @@
 			$('#kdp3').get(0).addJsListener("playerUpdatePlayhead", "playerUpdatePlayheadHandler");
 			$('#kdp3').get(0).addJsListener("bytesTotalChange", "bytesTotalChangeHandler");
 			$('#kdp3').get(0).addJsListener("bytesDownloadedChange", "bytesDownloadedChangeHandler");
+			$('#kdp3').get(0).addJsListener("entryReady", "entryHandler"); // Used by MediaSpace
 
 			for (var i=0; i < notificationslist.length; ++i) {
 				if (notificationslist[i] != 'playerUpdatePlayhead') {
@@ -186,6 +187,10 @@
 			}
 			$('#videotime').text(data);
 		}
+		
+		function entryHandler(entry) {
+			console.log(entry);
+		}
 	</script>
 	
 	<script type="text/javascript">/*
@@ -242,6 +247,7 @@
         <dfn title="Click the play, pause or stop buttons to control the player playback. Set a time in seconds to the seek field and click the 'seek to' button to jump to that seconds in the playing media">Playback control:</dfn>&nbsp;<a href="http://www.kaltura.org/demos/kdp3/docs.html#sendnotification">[docs]</a>
         <div class="controls">
 			<a href="#" onclick="$('#kdp3').get(0).sendNotification('doPlay');return false;">Play</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doPause');return false;">Pause</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doStop');return false;">Stop</a> 
+			| <a href="#" onclick="alert($('#kdp3').get(0).evaluate('{mediaProxy.entry.id}'));">Get entry id</a>
         </div>
         <div class="controls">
 			Seek to: <input size="4" id="seekto" value="25" type="text"><button onclick="$('#kdp3').get(0).sendNotification('doSeek', parseFloat($('#seekto').val()));return false;">Seek</button>
