--- a/modules/KalturaSupport/tests/kdp3_mapping.html
+++ b/modules/KalturaSupport/tests/kdp3_mapping.html
@@ -190,6 +190,12 @@
 		function entryHandler(entry) {
 			console.log(entry);
 		}
+		
+		$(function() {
+			$('#cMedia').click( function() {
+				$('#kdp3').get(0).sendNotification("changeMedia",{entryId:"1_8c3s1pvx"});
+			});
+		});
 	</script>
 	
 	<script type="text/javascript">/*
@@ -246,7 +252,8 @@
         <dfn title="Click the play, pause or stop buttons to control the player playback. Set a time in seconds to the seek field and click the 'seek to' button to jump to that seconds in the playing media">Playback control:</dfn>&nbsp;<a href="http://www.kaltura.org/demos/kdp3/docs.html#sendnotification">[docs]</a>
         <div class="controls">
 			<a href="#" onclick="$('#kdp3').get(0).sendNotification('doPlay');return false;">Play</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doPause');return false;">Pause</a> | <a href="#" onclick="$('#kdp3').get(0).sendNotification('doStop');return false;">Stop</a> 
-			| <a href="#" onclick="alert($('#kdp3').get(0).evaluate('{mediaProxy.entry.id}'));">Get entry id</a>
+			| <a href="#" onclick="$('#kdp3').get(0).evaluate('{mediaProxy.entry.id}');">Get entry id</a> | 
+			<a href="#" id="cMedia">Change Media</a>
         </div>
         <div class="controls">
 			Seek to: <input size="4" id="seekto" value="25" type="text"><button onclick="$('#kdp3').get(0).sendNotification('doSeek', parseFloat($('#seekto').val()));return false;">Seek</button>
