--- a/modules/KalturaSupport/tests/WatermarkTest.html
+++ b/modules/KalturaSupport/tests/WatermarkTest.html
@@ -4,9 +4,8 @@
 
 <script type="text/javascript" src="../../../mwEmbedLoader.js?debug=true"></script>  
 <script type="text/javascript">		
-	mw.setConfig( 'Kaltura.IframeRewrite', false );	
- 	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);
- 	mw.setConfig( 'EmbedPlayer.OverlayControls', true);	
+	mw.setConfig( 'Kaltura.IframeRewrite', true );	
+ 	mw.setConfig( 'EmbedPlayer.EnableIpadHTMLControls', true);	
 </script>
 
 </head>
