--- a/modules/KalturaSupport/tests/Bumper_playlist.html
+++ b/modules/KalturaSupport/tests/Bumper_playlist.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>New Video Test</title>
 <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> 
-<!-- <script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>  --> 
+<!-- <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>  --> 
 </head>
 
 <body>
