--- a/modules/KalturaSupport/tests/FallForwardPlayer.html
+++ b/modules/KalturaSupport/tests/FallForwardPlayer.html
@@ -7,7 +7,7 @@
 <!--
 <script type="text/javascript" src="http://html5.kaltura.org/js"></script>
 <script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&debug=true"></script>    
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true>"></script>
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true>"></script>
 -->
   
 <script type="text/javascript">
