--- a/modules/Plymedia/tests/Plymedia_Kaltura.html
+++ b/modules/Plymedia/tests/Plymedia_Kaltura.html
@@ -3,7 +3,7 @@
 <title>Fall forward Plymedia</title>
 
 <!--  <script type="text/javascript" src="../../../mwEmbedLoader.js"></script> -->
-<script type="text/javascript" src="../../../mwEmbed.js?debug=true"></script>
+<script type="text/javascript" src="../../../ResourceLoader.php?class=window.jQuery,mwEmbed&&debug=true"></script>
 
 <script type="text/javascript">		
 	mw.setConfig( 'Kaltura.IframeRewrite', true );	
